@@ -1,3 +1,8 @@
+2004-09-01  Andrew Cagney  <cagney@gnu.org>
+
+	* gdb.threads/staticthreads.c, gdb.threads/staticthreads.exp: New
+	files.
+
 2004-09-01  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* gdb.base/unload.exp: Fix expected warning message to match
@@ -206,6 +211,11 @@
 	* gdb.cp/classes.exp (test_ptype_class_objects): Call
 	cp_test_ptype_class.
 	(test_enums): Likewise.
+
+2004-08-10  Andrew Cagney  <cagney@gnu.org>
+
+	* gdb.threads/staticthreads.c, gdb.threads/staticthreads.exp: New
+	files.
 
 2004-08-10  Andrew Cagney  <cagney@gnu.org>
 
